Render fetched form Q&A.

--- a/ClientApp/src/custom.css
+++ b/ClientApp/src/custom.css
@@ -1,18 +1,30 @@
-/* Provide sufficient contrast against white background */
-a {
-  color: #0366d6;
-}
-
 body {
-  padding: 24px;
+  background: #ebf2f1 !important;
 }
 
-code {
-  color: #E01A76;
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+  body {
+    padding: 8px;
+  }
 }
 
-.btn-primary {
-  color: #fff;
-  background-color: #1b6ec2;
-  border-color: #1861ac;
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (min-width: 600px) {}
+
+/* Medium devices (landscape tablets, 768px and up) */
+@media only screen and (min-width: 768px) {
+  body {
+    padding: 12px;
+  }
+}
+
+/* Large devices (laptops/desktops, 992px and up) */
+@media only screen and (min-width: 992px) {}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+@media only screen and (min-width: 1200px) {
+  body {
+    padding: 24px;
+  }
 }
